Add API endpoint to generate JWT to be signed by ooni-orchestrate
